--- a/algorithms/CMakeLists.txt
+++ b/algorithms/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 2.4)
 project(AlgorithmsDataStructures)
 
 add_subdirectory(sorting)
+add_subdirectory(dynamic-programming)
