Implemented linked list and bubble sort, fixed bug
Signed-off-by: Kamil Przybyła <kkamil.przybyla@gmail.com>

--- a/algorithms/sorting/CMakeLists.txt
+++ b/algorithms/sorting/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.4)
 project(AlgorithmsDataStructures)
 
-add_executable(selection-sort
-  selection-sort/selection-sort.hpp
-  selection-sort/test.cpp)
+add_executable(sorting
+  bubble-sort/bubbleSort.hpp
+  selection-sort/selectionSort.hpp
+  test.cpp)
