--- a/data-structures/CMakeLists.txt
+++ b/data-structures/CMakeLists.txt
@@ -2,5 +2,9 @@ cmake_minimum_required(VERSION 2.4)
 project(AlgorithmsDataStructures)
 
 add_executable(dynamic-array
-  dynamic-array/dynamic-array.hpp
+  dynamic-array/dynamicArray.hpp
   dynamic-array/test.cpp)
+
+add_executable(linked-list
+  linked-list/linkedList.hpp
+  linked-list/test.cpp)
