Added heap and made minor changes in dynamic array
Signed-off-by: Kamil Przybyła <kkamil.przybyla@gmail.com>

--- a/data-structures/CMakeLists.txt
+++ b/data-structures/CMakeLists.txt
@@ -8,3 +8,7 @@ add_executable(dynamic-array
 add_executable(linked-list
   linked-list/linkedList.hpp
   linked-list/test.cpp)
+
+add_executable(heap
+  heap/heap.hpp
+  heap/test.cpp)
