Priority queue and minor changes with data access
Signed-off-by: Kamil Przybyła <kkamil.przybyla@gmail.com>

--- a/data-structures/CMakeLists.txt
+++ b/data-structures/CMakeLists.txt
@@ -28,3 +28,7 @@ add_executable(heap
 add_executable(bst
   bst/bst.hpp
   bst/test.cpp)
+
+add_executable(priorityQueue
+  priority-queue/priorityQueue.hpp
+  priority-queue/test.cpp)
