Implemented Longest Common Subsequence
Signed-off-by: Kamil Przybyła <kkamil.przybyla@gmail.com>

--- a/algorithms/dynamic-programming/CMakeLists.txt
+++ b/algorithms/dynamic-programming/CMakeLists.txt
@@ -9,6 +9,10 @@ add_executable(lps
   declarations.hpp
   lps.cpp lps_test.cpp)
 
+add_executable(lcs
+  declarations.hpp
+  lcs.cpp lcs_test.cpp)
+
 add_executable(edit-distance
   declarations.hpp
   editDistance.cpp editDistance_test.cpp)
