Added Hash Set with chaining
Signed-off-by: Kamil Przybyła <kkamil.przybyla@gmail.com>

--- a/data-structures/CMakeLists.txt
+++ b/data-structures/CMakeLists.txt
@@ -36,3 +36,7 @@ add_executable(priorityQueue
 add_executable(avl
   avl/avl.hpp
   avl/test.cpp)
+
+add_executable(hashset
+  hashset/hashset.hpp
+  hashset/test.cpp)
