Implemented naive string search
Signed-off-by: Kamil Przybyła <kkamil.przybyla@gmail.com>

--- a/algorithms/CMakeLists.txt
+++ b/algorithms/CMakeLists.txt
@@ -3,3 +3,4 @@ project(AlgorithmsDataStructures)
 
 add_subdirectory(sorting)
 add_subdirectory(dynamic-programming)
+add_subdirectory(string-searching)
