Knuth-Morris-Pratt, minor changes in naive search
Signed-off-by: Kamil Przybyła <kkamil.przybyla@gmail.com>

--- a/algorithms/string-searching/CMakeLists.txt
+++ b/algorithms/string-searching/CMakeLists.txt
@@ -4,3 +4,7 @@ project(AlgorithmsDataStructures)
 add_executable(naiveSearch
   naiveSearch/naiveSearch.hpp
   naiveSearch/test.cpp)
+
+add_executable(kmp
+  kmp/kmp.hpp
+  kmp/test.cpp)
