Basic graph, BFS & DFS visitors
Signed-off-by: Kamil Przybyła <kkamil.przybyla@gmail.com>

--- a/data-structures/CMakeLists.txt
+++ b/data-structures/CMakeLists.txt
@@ -40,3 +40,7 @@ add_executable(avl
 add_executable(hashset
   hashset/hashset.hpp
   hashset/test.cpp)
+
+add_executable(graph
+  graph/graph.hpp
+  graph/test.cpp)
